[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fibphoflow"
version = "0.1"
authors = [
  { name="Nikolas Hayes", email="nikolashayes2025@u.northwestern.edu" },
]
description = "Python package to process and visualize TDT fiber photometry data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
]
dependencies = [
	'matplotlib >= 3.3.0,
	numpy >= 1.19.2,
	pandas >= 1.0.5,
	seaborn >= 0.11.0,
	scipy >= 1.5.0,
	tables >= 3.6.0,
	tdt >= 0.3.9,
	xlsxwriter >= 1.4.5,
]

[project.urls]
"Homepage" = "https://github.com/nikhayes/fibphoflo"
"Bug Tracker" = "https://github.com/nikhayes/fibphoflo/issues"
