[build-system]
requires = [
	"setuptools >= 65",
	"setuptools_scm[toml]",
	"wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "fibphoflow"
dynamic = ["version"]
description = "Python package to process and visualize TDT fiber photometry data"
dependencies = [
	'importlib_metadata; python_version < "3.8"',
	"numpy",
	"pandas",
	"seaborn",
	"scipy",
	"tables",
	"tdt",
	"xlsxwriter",
]
license = {text = "MIT License"}
keywords = [
	"neuroscience",
	"calcium activity",
	"fiber photometry",
	"data processing",
]
classifiers = [
	"Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Topic :: Scientific/Engineering",
]

[tools.setuptools_scm]
write_to = "fibphoflow/_version.py"

